--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 ising
 isingpng
 isingmov
+isingclusters
 ising.exe
 isingpng.exe
 isingmov.exe
 lattice.pos
 em.csv
+clusters.csv
 swolff*.png
 metadata.yaml
 *.o
